Avoid changing permissions of co-located packages and logs
[#138912309]

Signed-off-by: Josh Hill <jhill@pivotal.io>

--- a/jobs/service-metrics/templates/pre-start.erb
+++ b/jobs/service-metrics/templates/pre-start.erb
@@ -1,19 +1,17 @@
 #!/bin/bash -e
 
 JOB_DIR=/var/vcap/jobs/service-metrics
-ROOT_LOG_DIR=/var/vcap/sys/log
 INIT_LOG_DIR=/var/vcap/sys/log/service-metrics
 
 ensure_dir() {
   local dir=$1
   mkdir -p "${dir}"
-  chown -LR vcap:vcap "${dir}"
+  find -L "${dir}" | grep -v "packages" | xargs chown vcap:vcap
   chmod 750 "${dir}"
 }
 
 main() {
   ensure_dir "${JOB_DIR}"
-  ensure_dir "${ROOT_LOG_DIR}"
   ensure_dir "${INIT_LOG_DIR}"
 }
 
