Use different files for control script logs and service-metrics logs
[#150252552]

Signed-off-by: Winna Bridgewater <wbridgewater@pivotal.io>

--- a/jobs/service-metrics/templates/service_metrics_ctl.erb
+++ b/jobs/service-metrics/templates/service_metrics_ctl.erb
@@ -35,7 +35,7 @@ script_log_tag=service-metrics-ctl
 script_log_file=$log_dir/ctl.log
 metrics_log_tag=service-metrics
 metrics_log_file=$log_dir/service-metrics.log
-export LOG_FILE=$metrics_log_file
+export LOG_FILE=$script_log_file
 
 case $1 in
 
